@@ -1,4 +1,4 @@
 Name:     scrub
-Version:  2.4.2
+Version:  2.5.0
 Release:  1
-Date:     2011-08-29
+Date:     2012-05-03
